fixed corner overlap on rotation 10

--- a/css/hex.css
+++ b/css/hex.css
@@ -1,5 +1,14 @@
+body {
+    background-color: rgb(25, 29, 20);
+}
+
+#center-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 #svg-wrap {
-    border: 2px solid;
     height: 100vh;
     width: 50vh;
     display: flex;
@@ -12,6 +21,8 @@
     width: 50vh;
     height: 50vh;
 }
+
+
 
 #my-shape-bottom {
     transform: scaleY(-1);
